Models and schema created, pushing up

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -27,4 +27,4 @@ android.enableJetifier=true
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
 
-kotlinVersion=1.5.30
+# kotlinVersion=1.5.30
